hero page iamge added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="upperbar">Step into luxury — your style story begins at Closette.</div>
     <div class="navbar">
         <div>
-            <img src="logo.png" alt="Closette Logo" class="logo">
+            <img src="images/page1/logo.png" alt="Closette Logo" class="logo">
         </div>
         <div>
             <ul class="nav-links">
@@ -39,7 +39,7 @@
     <!-- Header Section -->
     
      <div>
-     <img src="Hero-page.png" alt="Header Image" class="header-image">
+     <img src="images/page1/Hero-page.png" alt="Header Image" class="header-image">
      <div class="sale-text-1">
         <p class="heading-1">The Art of Feminine Dressing</p>
         <p class="subheading-1">Where grace meets confidence — Closette curates timeless pieces that let every woman feel effortlessly beautiful, every single day.</p>
