--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
   </section>
   <div class="cat">
-        <img src="cat-footer.png" alt="cat">
+        <img src="images/page1/cat-footer.png" alt="cat">
      </div>
   
      <footer class="footer">
