nav bar added to all the new html pages

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="newarrivals.html">New Arrivals</a></li>
-                <li><a href="dresses.html">Dresses</a></li>
-                <li><a href="coords.html">Co-ords</a></li>
+                <li><a href="newin.html">New Arrivals</a></li>
+                <li><a href="dress.html">Dresses</a></li>
+                <li><a href="coord.html">Co-ords</a></li>
                 <li><a href="tops.html">Tops</a></li>
                 <li><a href="bottoms.html">Bottoms</a></li>
-                <li><a href="Accessories.html">Accessories</a></li> 
+                <li><a href="accessories.html">Accessories</a></li> 
             </ul>
         </div>
         <div class="search-bar">
