--- a/tops.html
+++ b/tops.html
@@ -35,3 +35,54 @@
             <i class="fa-solid fa-bag-shopping"></i>
         </div>
     </div>
+    <div class="first_page">
+        <img src="images/page5/tops-main.png" alt="newin">
+        <div class="filters">
+            <select id="filter-section" class="size">
+                <option value="size">Size</option>
+                <option value="xs">XS</option>
+                <option value="s">S</option>
+                <option value="m">M</option>
+                <option value="l">L</option>
+                <option value="xl">XL</option>
+            </select>
+            <select id="filter-section" class="color">
+                <option value="color">Color</option>
+                <option value="brown">🟤 Brown</option>
+                <option value="white">⚪ White</option>
+                <option value="black">⚫ Black</option>
+                <option value="blue">🔵 Blue</option>
+                <option value="lavender">🟣 Lavender</option>
+                <option value="yellow">🟡 Yellow</option>
+            </select>
+            <select id="filter-section" class="prize">
+                <option value="prize">Price</option>
+                <option value="500">Below Rs.500</option>
+                <option value="500 - 1000">Rs.500 TO Rs.1000</option>
+                <option value="1000 - 1500">Rs.1000 TO Rs.1500</option>
+                <option value="1500 - 2000">Rs.1500 TO Rs.2000</option>
+                <option value="2000">Above Rs.2000</option>
+            </select>
+            <select id="filter-section" class="length">
+                <option value="length">Length</option>
+                <option value="mini">Mini</option>
+                <option value="midi">Midi</option>
+                <option value="full">Full</option>
+            </select>
+            <select id="filter-section" class="sleeves">
+                <option value="sleeves">Sleeves</option>
+                <option value="sleeveless">Sleeveless</option>
+                <option value="short-sleeved">Short-sleeved</option>
+                <option value="long-sleeved">Long-sleeved</option>
+            </select>
+            <select id="filter-section" class="trend">
+                <option value="trend">Trend</option>
+            </select>
+            <select id="filter-section" class="occasion">
+                <option value="occasion">Occasion</option>
+            </select>
+            <select id="filter-section" class="brand">
+                <option value="brand">Brand</option>
+            </select>
+        </div>
+    </div>
